# glacier-strain-tools

./: .gitignore  LICENSE  README.md  environment.yml  example.ipynb  pyproject.toml  setup.py  strain_tools.py  test_strain_tools.py
.ipynb_checkpoints/: notebook_example-checkpoint.ipynb
data/: README.md  vel2018_vx.tif  vel2018_vy.tif
src/strain_tools/: __init__.py  _cli.py  _logarithmic.py  _numba.py  _strain_rates.py  _utils.py
strain_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
